--- a/app/styles/components/resize-handle.scss
+++ b/app/styles/components/resize-handle.scss
@@ -1,30 +1,49 @@
-@use '../z-index';
+// components/resize-handle.scss
+@use '../variables' as *;
+@use '../z-index' as z;
 
 [data-resize-handle] {
+  --handle-color: rgb(var(--color-border));
+  --handle-active-color: rgb(var(--color-primary));
+  
+  @include animations.transition-fast;
   position: relative;
-
-  &[data-panel-group-direction='horizontal']:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -6px;
-    right: -5px;
-    z-index: z-index.$zIndexMax;
+  background: transparent;
+  
+  &:hover {
+    --handle-color: rgba(var(--color-primary), 0.5);
   }
 
-  &[data-panel-group-direction='vertical']:after {
+  &::after {
     content: '';
     position: absolute;
-    left: 0;
-    right: 0;
-    top: -5px;
-    bottom: -6px;
-    z-index: z-index.$zIndexMax;
+    background: var(--handle-color);
+    z-index: z('header');
+    transition: inherit;
   }
 
-  &[data-resize-handle-state='hover']:after,
-  &[data-resize-handle-state='drag']:after {
-    background-color: #8882;
+  &[data-panel-group-direction='horizontal'] {
+    width: 1px;
+    &::after {
+      width: 3px;
+      left: -1px;
+      top: 0;
+      bottom: 0;
+    }
+  }
+
+  &[data-panel-group-direction='vertical'] {
+    height: 1px;
+    &::after {
+      height: 3px;
+      top: -1px;
+      left: 0;
+      right: 0;
+    }
+  }
+
+  &[data-resize-handle-state='drag'] {
+    --handle-color: var(--handle-active-color);
+    cursor: col-resize;
   }
 }
